		   'c' or 'python'; --disable-pyecasound disables 
		   them both
	- changed: pyecasound - if ecasound's build prefix does not
		   match the python prefix, /usr or /usr/local, 
 		   pyecasound will be disabled; you can override 
		   this by specifying the python module directory 
		   explicitly with the --with-python-modules=DIR 
		   option
	- fixed: use of the JACK transport API was never actually 
                 enabled in 2.2.3
	- fixed: .aiff/.snd/.au input/output was not working at all
  	 	 due to a typo in source code
	- fixed: a chain with a short input file could cause a nasty
 		 feedback loop if processed with certain effects 
		 and mixed with audio from other chains
	- fixed: ewf length and offset errors with sample rates 
		 different from default (usually 44.1kHz)
	- fixed: chainsetup samplerate incorrectly set with some
	 	 configurations; caused problems with -t:xxx and 
		 other functions related to chainsetup level position 
		 and length
	- fixed: serious bug in mixing down multiple chains with
 		 different number of channels to one output; audio 
		 from previous mixdown rounds leaked to unused 
		 source channels
	- fixed: some chainsetup parsing errors were totally ignored 
		 and not reported to the user
27042003 (v2.2.3)  -** stable release **-
	- added: support for both -0.64 and 0.65- JACK versions; 
		 transport functionality is only enabled with the 
		 newer versions
	- added: automatic query of child object sample rate by 
		 giving 'auto' as 2nd arg to resample object
	- changed: by default python version of ECI is used; the C 
		   python module for ECI, pyecasound, is only compiled
		   if --enable-pyecasound is specified
	- changed: jack_auto,dstclient input/output object now 
		   automatically connects to matching ports of JACK
		   dstclient (no longer requires dstclient to have
		   in_X/out_X port names)
	- fixed: yet another fix for creating temporary files in